--- a/index.html
+++ b/index.html
@@ -18,14 +18,12 @@
       <ul class="right hide-on-med-and-down">
         <li><a href="#asignaturas">Subjects</a></li>
         <li><a href="#contacta">Contact</a></li>
-        <li><a href="#">About</a></li>
 
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
         <li><a href="#asignaturas">Subjects</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="#contacta">Contact</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
@@ -36,10 +34,10 @@
       <div class="container">
         <br><br>
         <h1 class="header center teal-text text-grey-darken-4">Alejandro Diaz Cueca</h1>
-        <div class="row center">
-          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
+        <div class="row-center">
+        <h3 class="header center black-text">Estudiante de Ingeniería Informática</h3>
         </div>
-        <br><br>
+        
 
       </div>
     </div>
@@ -131,7 +129,7 @@
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h4>About Me</h4>
-          <p class="cyan-text text-accent-4">Soy un proyecto de Ingeniero Informático en la Universidad de La Laguna y esta web es un prototipo de mi perfil profesional.</p>
+          <p class="cyan-text text-accent-4">Siempre he estado en contacto con el mundo de la informática, sobre todo en el apartado de los e-Sports, gracias a esto descubrí todas las posibilidades que ofrece el campo de la informática y las nuevas tecnologías.</p>
         </div>
       </div>
 
@@ -150,27 +148,22 @@
     <a name="contacta"></a>
 
       <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Contacta</h5>
-          <img  class="borde" src="images/github-logo-icon-24.png">
+        <div class="col l4 s12">
+           <a href="https://github.com/AlejandrDiaz"><img  class="borde" src="images/github-logo-icon-24.png"> </a>
         </div>
         
-        <div class="col l3 s12">
-
-        <h5 class="white-text">Contacta</h5>
+        <div class="col l4 s12">
           <div class="g-person" data-href="//plus.google.com/u/0/109182195443574897364" data-layout="landscape" data-rel="author"></div>
         </div>
 
-        <div class="col 10 s12">
-
-        <h5 class="white-text">Contacta</h5>
+        <div class="col l4 s12">
+          <a href="https://www.facebook.com/alejandro.diazcueca"> <img class="borde" src="images/fb.jpg"> </a>
         </div>
-
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+      Made by <a class="brown-text text-lighten-3" href="">Alejandro Díaz Cueca</a>
       </div>
     </div>
   </footer>
