--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="brown-text text-lighten-3" href="">Alejandro Díaz Cueca</a>
+      Made by <a class="black-text" href="">Alejandro Díaz Cueca</a>
       </div>
     </div>
   </footer>
