--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
 
       <!--   Icon Section   -->
       <div class="row">
-        <div class="col s12 m4">
+        <div class="col l4 s12 m4">
           <div class="icon-block">
 
             <ul class="light collection with-header">
-              <li class="collection-header"><h4>Optimizacion</h4></li>
-              <li class="collection-item"><a href="#">Practica de Grafos</a></li>
+              <li class="collection-header"><h4>Desarrollo de Sistemas Informáticos</h4></li>
+              <li class="collection-item"><a href="#">Tareas Iniciales</a></li>
               </ul>
           </div>
         </div>
 
-        <div class="col s12 m4">
+        <div class="col  l4 s12 m4">
           <div class="icon-block">
             
             <ul class="light collection with-header">
@@ -74,7 +74,7 @@
           </div>
         </div>
 
-        <div class="col s12 m4">
+        <div class="col l4 s12 m4">
           <div class="icon-block">
             <ul class="light collection with-header">
               <li class="collection-header"><h4>Sistemas Operativos</h4></li>
@@ -85,7 +85,7 @@
           </div>
         </div>
 
-        <div class="col s12 m4">
+        <div class="col l4 s12 m4">
           <div class="icon-block">
             <ul class="light collection with-header">
               <li class="collection-header"><h4>Algoritmos y Estructuras de Datos Avanzadas</h4></li>
@@ -95,7 +95,7 @@
         </div>
 
 
-        <div class="col s12 m4">
+        <div class="col l4 s12 m4">
           <div class="icon-block">
             <ul class="light collection with-header">
               <li class="collection-header"><h4>Usabilidad y Accesibilidad</h4></li>
@@ -105,7 +105,7 @@
         </div>
 
 
-        <div class="col s12 m4">
+        <div class="col l4 s12 m4">
           <div class="icon-block">
             <ul class="light collection with-header">
               <li class="collection-header"><h4>Seguridad en Sistemas Informáticos</h4></li>
