--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
             <ul class="light collection with-header">
               <li class="collection-header"><h4>Desarrollo de Sistemas Informáticos</h4></li>
-              <li class="collection-item"><a href="#">Tareas Iniciales</a></li>
+              <li class="collection-item"><a href="https://alejandrdiaz.github.io/#contacta">Tareas Iniciales</a></li>
               </ul>
           </div>
         </div>
