--- a/index.html
+++ b/index.html
@@ -56,25 +56,24 @@
 
             <ul class="light collection with-header">
               <li class="collection-header"><h4>Desarrollo de Sistemas Informáticos</h4></li>
-              <li class="collection-item"><a href="https://alejandrdiaz.github.io/#contacta">Tareas Iniciales</a></li>
+              <li class="collection-item"><a target="_blank" href="https://github.com/ULL-ESIT-DSI-1617/tareas-iniciales-alejandro-raul">Tareas Iniciales</a></li>
               </ul>
           </div>
         </div>
 
-        <div class="col  l4 s12 m4">
+        <div class="col s12 m4">
           <div class="icon-block">
             
             <ul class="light collection with-header">
-              <li class="collection-header"><h4>AED</h4></li>
-              <li class="collection-item"><a href="#">Practica de Matrices</a></li>
-              <li class="collection-item"><a href="#">Prctica operaciones con Sparse Vector</a></li>
+              <li class="collection-header"><h4>Algoritmos y Estructuras de Datos</h4></li>
+              <li class="collection-item"><a href="#">Practicas</a></li>
               </ul>
 
 
           </div>
         </div>
 
-        <div class="col l4 s12 m4">
+        <div class="col s12 m4">
           <div class="icon-block">
             <ul class="light collection with-header">
               <li class="collection-header"><h4>Sistemas Operativos</h4></li>
@@ -85,7 +84,7 @@
           </div>
         </div>
 
-        <div class="col l4 s12 m4">
+        <div class="col s12 m4">
           <div class="icon-block">
             <ul class="light collection with-header">
               <li class="collection-header"><h4>Algoritmos y Estructuras de Datos Avanzadas</h4></li>
@@ -95,11 +94,11 @@
         </div>
 
 
-        <div class="col l4 s12 m4">
+        <div class="col s12 m4">
           <div class="icon-block">
             <ul class="light collection with-header">
               <li class="collection-header"><h4>Usabilidad y Accesibilidad</h4></li>
-              <li class="collection-item"><a href="#">Prototipo de Aplicación Web</a></li>
+              <li class="collection-item"><a  target="_blank" href="https://github.com/AlejandrDiaz/UsabilidadyAccesbilidad">Prototipo de Aplicación Web</a></li>
               </ul>
           </div>
         </div>
