--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center teal-text text-grey-darken-4">Alejandro Diaz Cueca</h1>
+        <h1 class="header center grey-text text-darken-3">Alejandro Diaz Cueca</h1>
         <div class="row-center">
         <h3 class="header center black-text">Estudiante de Ingeniería Informática</h3>
         </div>
