--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center grey-text text-darken-3">Alejandro Diaz Cueca</h1>
+        <h1 class="header center green-text text-accent-2">Alejandro Díaz Cueca</h1>
         <div class="row-center">
         <h3 class="header center black-text">Estudiante de Ingeniería Informática</h3>
         </div>
@@ -128,7 +128,7 @@
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h4>About Me</h4>
-          <p class="cyan-text text-accent-4">Siempre he estado en contacto con el mundo de la informática, sobre todo en el apartado de los e-Sports, gracias a esto descubrí todas las posibilidades que ofrece el campo de la informática y las nuevas tecnologías.</p>
+          <p class="grey-text text-lighten-4">Siempre he estado en contacto con el mundo de la informática, sobre todo en el apartado de los e-Sports, gracias a esto descubrí todas las posibilidades que ofrece el campo de la informática y las nuevas tecnologías.</p>
         </div>
       </div>
 
