--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
             <ul class="light collection with-header">
               <li class="collection-header"><h4>Desarrollo de Sistemas Informáticos</h4></li>
               <li class="collection-item"><a target="_blank" href="https://github.com/ULL-ESIT-DSI-1617/tareas-iniciales-alejandro-raul">Tareas Iniciales</a></li>
+              <li class="collection-item"><a target="_blank" href="https://github.com/ULL-ESIT-DSI-1617/primeros-pasos-en-nodejs-alejandro-raul-35l2">Primeros Pasos Nodejs</a></li>
+
               </ul>
           </div>
         </div>
@@ -73,17 +75,7 @@
           </div>
         </div>
 
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <ul class="light collection with-header">
-              <li class="collection-header"><h4>Sistemas Operativos</h4></li>
-              <li class="collection-item"><a href="#">Script en Bash</a></li>
-              <li class="collection-item"><a href="#">Practica de myps</a></li>
-
-              </ul>
-          </div>
-        </div>
-
+        
         <div class="col s12 m4">
           <div class="icon-block">
             <ul class="light collection with-header">
