--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
               <li class="collection-header"><h4>Desarrollo de Sistemas Informáticos</h4></li>
               <li class="collection-item"><a target="_blank" href="https://github.com/ULL-ESIT-DSI-1617/tareas-iniciales-alejandro-raul">Tareas Iniciales</a></li>
               <li class="collection-item"><a target="_blank" href="https://github.com/ULL-ESIT-DSI-1617/primeros-pasos-en-nodejs-alejandro-raul-35l2">Primeros Pasos Nodejs</a></li>
+              <li class="collection-item"><a target="_blank" href="https://github.com/ULL-ESIT-DSI-1617/estudiar-las-rutas-en-expressjs-alejandro-raul-35l2">Estudiar las rutas en Express</a></li>
 
               </ul>
           </div>
