--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
               <li class="collection-item"><a target="_blank" href="https://github.com/ULL-ESIT-DSI-1617/sessions-y-autenticacion-en-expressjs-alejandro-raul-35l2-p5">Sessions y Autenticación en Expressjs</a></li>
               <li class="collection-item"><a target="_blank" href="https://github.com/ULL-ESIT-DSI-1617/programacion-orientada-a-objetos-y-herencia-en-javascript-alejandro-raul-35l2-p5">POO y Herencia en JavaScript</a></li>
               <li class="collection-item"><a target="_blank" href="https://github.com/ULL-ESIT-DSI-1617/eliminando-switch-smell-alejandro-raul-35l2-p5-1">Eliminando Switch Smell</a></li>
+              <li class="collection-item"><a target="_blank" href="https://github.com/ULL-ESIT-DSI-1617/creacion-de-paquetes-npm-alejandro-raul-35l2-p5">Creacion de modulos NPM</a></li>
               </ul>
           </div>
         </div>
